# clawdrop

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: cli.rs  commands.rs  constants.rs  errors.rs  file_index.rs  macros.rs  main.rs  network.rs  ui.rs  utils.rs
src/commands/: auth.rs  doctor.rs  list.rs  logout.rs  post.rs  push.rs  set.rs  unset.rs  upgrade.rs  whereis.rs
src/errors/: api_key.rs  auth.rs  common.rs  doctor.rs  list.rs  network.rs  post.rs  push.rs  set.rs
