[package]
name = "clawdrop"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Fast, clean CLI for deployment of Raccreative Games games"
authors = ["Raccreative Games <contact@raccreativegames.com>"]
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "games", "deployment", "raccreative", "build"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
open = "5.3.2"
reqwest = { version = "0.12.23", features = ["blocking", "json", "rustls-tls", "multipart"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
aws-sdk-s3 = "1.106.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.42"
sha2 = "0.10"
mime_guess = "2"
globset = "0.4"
self_update = "0.42.0"
rayon = "1.11.0"
